--- a/Src/Api/appsettings.json
+++ b/Src/Api/appsettings.json
@@ -6,11 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "Elastic": {
-    "Addresses": [ "http://localhost:9200/" ]
-  },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=SampleLibrary;Trusted_Connection=True;"
+    "DefaultConnection": "Server=localhost;Database=User;Trusted_Connection=True;"
   },
   "AllowedHosts": "*"
 }
